deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: std-dive-logger-web
spec:
  selector: { app: std-dive-logger-web }
  ports:
    - { port: 80, targetPort: 80 }
